@@ -5,6 +5,7 @@ netcfg (1.48) UNRELEASED; urgency=low
 
   [ Glenn Saberton ]
   * Coding style improvements.
+  * Refactor dhcp configuration code.
 
  -- Frans Pop <fjp@debian.org>  Sat, 28 Feb 2009 16:26:21 +0100
 
